--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "dotenv": "^16.0.2",
     "express": "^4.18.1",
     "jest": "^29.0.2",
+    "mongoose": "^6.5.4",
     "supertest": "^6.2.4"
   }
 }
